fix quantity button bug and redo page styling

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,4 +1,6 @@
 body{
   background: url(http://jackieos.com/wordpress/wp-content/uploads/2014/03/wood_background.jpg);
+  font-size: 2rem;
+  color: rgb(134, 158, 179)
 
 }
